<?xml version="1.0"?>
<package format="2">
  <name>my_rviz_panel</name>
  <version>0.0.1</version>
  <description>RViz test panel</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qt5</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
